feat: Implementación de XRAY
