# swagger/swagger.json
@@ -452,38 +452,6 @@
                 }
             }
         },
-        "/informacion_academica/contratos_docente/{numDocumento}": {
-            "get": {
-                "tags": [
-                    "informacion_academica"
-                ],
-                "description": "create GetContratosDocente",
-                "operationId": "InformacionAcademicaController.GetContratosDocente",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "numDocumento",
-                        "description": "Docente a consultar",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.ContratosDocentes"
-                            }
-                        }
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
         "/informacion_academica/informacion_coordinador/{id_dependencia_oikos}": {
             "get": {
                 "tags": [
@@ -513,12 +481,6 @@
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "models.ContratosDocentes": {
-            "title": "ContratosDocentes",
-            "type": "object"
         }
     },
     "tags": [
